# simpledb

./: Cargo.toml  README.md  benchmarks.sh
.github/workflows/: rust.yml
app/: esql.rs  execquery.rs  explainplan.rs  viewdef.rs
app/embedded/: execquery.rs  explainplan.rs  main.rs  metacmd.rs  tableschema.rs  updatecmd.rs  viewdef.rs
app/esql/: execquery.rs  explainplan.rs  main.rs
app/network/: client.rs  execquery.rs  explainplan.rs  metacmd.rs  rsql.rs  server.rs  tableschema.rs  updatecmd.rs
app/rsql/: build.rs  client.rs  main.rs  server.rs  test.capnp
benchmarks/: e2e.sh  gen-large-db.sh  gen-sql-for-db.sh  gen-sql-for-largedb.sh  index.html  init-book.sql  log2data.awk  log2json  log2json.awk  query-tiny.sql  query.sql  sample.json
capnp/: build.rs  remote.capnp
docs/: index.html
src/: buffer.rs  client.rs  esql.rs  file.rs  filemanager.rs  index.rs  lib.rs  log.rs  main.rs  materialize.rs  metadata.rs  multibuffer.rs  parser.rs  plan.rs  query.rs  rdbc.rs  record.rs  repr.rs  server.rs  tx.rs
src/buffer/: buffer.rs  manager.rs
src/client/: explainplan.rs  metacmd.rs  tableschema.rs
src/file/: block_id.rs  manager.rs  page.rs
src/index/: btree.rs  hash.rs  query.rs
src/log/: iterator.rs  manager.rs
src/materialize/: aggregationfn.rs  groupbyplan.rs  groupbyscan.rs  groupvalue.rs  materializeplan.rs  mergejoinplan.rs  mergejoinscan.rs  recordcomparator.rs  sortplan.rs  sortscan.rs  temptable.rs
src/metadata/: indexmanager.rs  manager.rs  statmanager.rs  tablemanager.rs  viewmanager.rs
src/multibuffer/: bufferneeds.rs  chunkscan.rs  multibufferproductplan.rs  multibufferproductscan.rs  productplan.rs  productscan.rs
src/opt/: heuristicqueryplanner.rs  tableplanner.rs
src/parser/: createindexdata.rs  createtabledata.rs  createviewdata.rs  ddl.rs  deletedata.rs  dml.rs  insertdata.rs  lexer.rs  modifydata.rs  parsec.rs  parser.rs  querydata.rs  sql.rs
src/plan/: basicqueryplanner.rs  basicupdateplanner.rs  plan.rs  planner.rs  productplan.rs  projectplan.rs  queryplanner.rs  selectplan.rs  tableplan.rs  updateplanner.rs
src/query/: constant.rs  expression.rs  predicate.rs  productscan.rs  projectscan.rs  scan.rs  selectscan.rs  term.rs  updatescan.rs
src/rdbc/: connectionadapter.rs  driveradapter.rs  embedded.rs  model.rs  network.rs  planrepradapter.rs  remote.rs  resultsetadapter.rs  resultsetmetadataadapter.rs  statementadapter.rs
src/record/: layout.rs  recordpage.rs  rid.rs  schema.rs  tablescan.rs
src/repr/: planrepr.rs
src/server/: config.rs  remote.rs  simpledb.rs
src/tx/: bufferlist.rs  (+4 more)
(+339 files in other folders)
