[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "capnp/build.rs"

[build-dependencies]
capnpc = "0.18.1"

[dependencies]
anyhow = "1.0.79"
capnp = "0.18.12"
capnp-rpc = "0.18.0"
chrono = "0.4.31"
combine = "4.6.6"
env_logger = "0.10.1"
futures = "0.3.30"
itertools = "0.12.0"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
rand = "0.8.5"
structopt = "0.3.26"
tokio = {version = "1.35.1", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["compat"]}

[lib]
name = "simpledb"
path = "src/lib.rs"

[[bin]]
name = "esql"
path = "app/embedded/main.rs"

[[bin]]
name = "simpledb-server"
path = "app/network/server.rs"

[[bin]]
name = "sql"
path = "app/network/client.rs"
