[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "capnp/build.rs"

[build-dependencies]
capnpc = "0.19.0"

[dependencies]
anyhow = "1.0.81"
capnp = "0.19.2"
capnp-rpc = "0.19.0"
chrono = "0.4.37"
combine = "4.6.6"
env_logger = "0.11.3"
futures = "0.3.30"
itertools = "0.12.1"
log = "0.4.21"
num-derive = "0.4.2"
num-traits = "0.2.18"
rand = "0.8.5"
structopt = "0.3.26"
tokio = {version = "1.36.0", features = ["full"]}
tokio-util = {version = "0.7.10", features = ["compat"]}

[lib]
name = "simpledb"
path = "src/lib.rs"

[[bin]]
name = "esql"
path = "app/embedded/main.rs"

[[bin]]
name = "simpledb-server"
path = "app/network/server.rs"

[[bin]]
name = "sql"
path = "app/network/client.rs"
